# up-host

./: .env.example  .gitignore  CLAUDE.md  README.md  build.py  debug_qml.py  mangauploadpro.bat  pyproject.toml  requirements.txt  run.py  start_app.bat  test_qml.qml  test_syntax.py
.claude/: settings.local.json
.github/workflows/: build-windows.yml
docs/: FRONTEND_MAP_INDEXADOR.md  FRONTEND_MAP_MODERN.md  FRONTEND_MAP_VISUAL.md  INDEXADOR_SYSTEM.md  MIGRATION.md  NEW_HOSTS.md  ROADMAP.md  ROADMAP_FOLDER_STRUCTURE_UI.md  ROADMAP_HOSTS.md  STATUS.md
old.code/: catbox_uploader_gui.py  requirements.txt
raw/: index.json  reader.json
src/: main.py
src/core/: __init__.py  config.py
src/core/hosts/: __init__.py  base.py  catbox.py  gofile.py  imagechest.py  imgbb.py  imgbox.py  imghippo.py  imgpile.py  imgur.py  lensdump.py  pixeldrain.py
src/core/models/: __init__.py  indexador.py
src/core/services/: __init__.py  batch_service.py  cache_service.py  github.py  indexador.py  performance_service.py  queue.py  scan_service.py  uploader.py
src/ui/: __init__.py  backend.py  backend_original.py  models.py
src/ui/handlers/: __init__.py  config_handler.py  github_manager.py  host_manager.py  manga_manager.py
src/ui/qml/: main.qml  main_backup.qml  main_legacy.qml  main_modern.qml
src/ui/qml/components/: AnalyticsDashboard.qml  BatchUploadManager.qml  DesignSystem.qml  DeveloperTools.qml  IndexadorDialog.qml  MangaCard.qml  MangaCardModern.qml  MangaDetailsView.qml  ModernButton.qml  ModernCard.qml  ModernChapterList.qml  ModernDropdown.qml  ModernInput.qml  ModernSettingsPanel.qml  ModernUploadWorkflow.qml  NotificationCenter.qml  UploadProgress.qml
src/utils/: __init__.py  helpers.py  json_updater.py  sanitizer.py
tests/: conftest.py  test_async_scanning.py  test_batch_service.py  test_core.py  test_scan_service.py  test_upload_queue.py
